--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,3 +1,9 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "javascript", "javascriptreact",  "typescript", "graphql", "html", "yaml",  "json", "python"]
+  "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "javascript", "javascriptreact",  "typescript", "graphql", "html", "yaml",  "json", "python"],
+  "explorer.width": 30,
+  "explorer.icon.enableNerdfont": true,
+  "explorer.keyMappings.global": {
+    "<cr>": ["expandable?", "expand", "open"],
+    "v": "open:vsplit"
+  }
 }
