--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,5 +1,5 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "javascript", "javascriptreact",  "typescript", "graphql", "html", "yaml",  "json", "python"],
+  "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "javascript", "javascriptreact",  "typescript", "typescriptreact", "graphql", "prisma", "html", "yaml",  "json", "python"],
   "explorer.width": 30,
   "explorer.icon.enableNerdfont": true,
   "explorer.keyMappings.global": {
