--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,5 @@
 {
+  // Format On Save
   "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "javascript", "javascriptreact",  "typescript", "typescriptreact", "graphql", "prisma", "html", "yaml",  "json", "python"],
   "explorer.width": 30,
   "explorer.icon.enableNerdfont": true,
@@ -7,10 +8,14 @@
     "v": "open:vsplit"
   },
 
+  // Prettier
   "prettier.printWidth": 80,
   "prettier.semi": true,
   "prettier.arrowParens": "avoid",
   "prettier.singleQuote": true,
   "prettier.trailingComma": "none",
-  "prettier.jsxSingleQuote": true
+  "prettier.jsxSingleQuote": true,
+
+  // Stylelintplus
+  "stylelintplus.cssInJs": true
 }
